syntax = "proto3";
package dadkvs;

message GetSeqNumberRequest {}
message GetSeqNumberResponse {
  int32 seqNumber = 1;
}

service DadkvsSequencerService {
  rpc getSeqNumber(GetSeqNumberRequest) returns (GetSeqNumberResponse);
}